standards/gnds-2.0-alpha/alpha/c/src/v2.0/mean/FissionEnergyRelease.h

// --- Const-aware handles.
typedef const struct FissionEnergyReleaseClass *const ConstHandle2ConstFissionEnergyRelease;
typedef       struct FissionEnergyReleaseClass *const ConstHandle2FissionEnergyRelease;
// +++ Set
extern_c void
FissionEnergyReleasePromptGammaEnergySet(ConstHandle2FissionEnergyRelease This, ConstHandle2ConstPromptGammaEnergy promptGammaEnergy);
// -----------------------------------------------------------------------------
// Child: delayedGammaEnergy
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FissionEnergyReleaseDelayedGammaEnergyHas(ConstHandle2ConstFissionEnergyRelease This);
// --- Get, const
extern_c Handle2ConstDelayedGammaEnergy
FissionEnergyReleaseDelayedGammaEnergyGetConst(ConstHandle2ConstFissionEnergyRelease This);
// +++ Get, non-const
extern_c Handle2DelayedGammaEnergy
FissionEnergyReleaseDelayedGammaEnergyGet(ConstHandle2FissionEnergyRelease This);
// +++ Set
extern_c void
FissionEnergyReleaseDelayedGammaEnergySet(ConstHandle2FissionEnergyRelease This, ConstHandle2ConstDelayedGammaEnergy delayedGammaEnergy);
// -----------------------------------------------------------------------------
// Child: delayedBetaEnergy
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FissionEnergyReleaseDelayedBetaEnergyHas(ConstHandle2ConstFissionEnergyRelease This);
// --- Get, const
extern_c Handle2ConstDelayedBetaEnergy
FissionEnergyReleaseDelayedBetaEnergyGetConst(ConstHandle2ConstFissionEnergyRelease This);
// +++ Get, non-const
extern_c Handle2DelayedBetaEnergy
FissionEnergyReleaseDelayedBetaEnergyGet(ConstHandle2FissionEnergyRelease This);
// +++ Set
extern_c void
FissionEnergyReleaseDelayedBetaEnergySet(ConstHandle2FissionEnergyRelease This, ConstHandle2ConstDelayedBetaEnergy delayedBetaEnergy);
// -----------------------------------------------------------------------------
// Child: neutrinoEnergy
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FissionEnergyReleaseNeutrinoEnergyHas(ConstHandle2ConstFissionEnergyRelease This);
// --- Get, const
extern_c Handle2ConstNeutrinoEnergy
FissionEnergyReleaseNeutrinoEnergyGetConst(ConstHandle2ConstFissionEnergyRelease This);
// +++ Get, non-const
extern_c Handle2NeutrinoEnergy
FissionEnergyReleaseNeutrinoEnergyGet(ConstHandle2FissionEnergyRelease This);
// +++ Set
extern_c void
FissionEnergyReleaseNeutrinoEnergySet(ConstHandle2FissionEnergyRelease This, ConstHandle2ConstNeutrinoEnergy neutrinoEnergy);
// -----------------------------------------------------------------------------
// Child: nonNeutrinoEnergy
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FissionEnergyReleaseNonNeutrinoEnergyHas(ConstHandle2ConstFissionEnergyRelease This);
// --- Get, const
extern_c Handle2ConstNonNeutrinoEnergy
FissionEnergyReleaseNonNeutrinoEnergyGetConst(ConstHandle2ConstFissionEnergyRelease This);
// +++ Get, non-const
extern_c Handle2NonNeutrinoEnergy
FissionEnergyReleaseNonNeutrinoEnergyGet(ConstHandle2FissionEnergyRelease This);
// +++ Set
extern_c void
FissionEnergyReleaseNonNeutrinoEnergySet(ConstHandle2FissionEnergyRelease This, ConstHandle2ConstNonNeutrinoEnergy nonNeutrinoEnergy);
// -----------------------------------------------------------------------------
// Child: totalEnergy
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FissionEnergyReleaseTotalEnergyHas(ConstHandle2ConstFissionEnergyRelease This);
// --- Get, const
extern_c Handle2ConstTotalEnergy
FissionEnergyReleaseTotalEnergyGetConst(ConstHandle2ConstFissionEnergyRelease This);
// +++ Get, non-const
extern_c Handle2TotalEnergy
FissionEnergyReleaseTotalEnergyGet(ConstHandle2FissionEnergyRelease This);
// +++ Set
extern_c void
FissionEnergyReleaseTotalEnergySet(ConstHandle2FissionEnergyRelease This, ConstHandle2ConstTotalEnergy totalEnergy);