versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/FissionEnergyRelease.f03


!! Set
subroutine FissionEnergyReleasePromptGammaEnergySet(handle, fieldHandle) &
      bind(C, name='FissionEnergyReleasePromptGammaEnergySet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine FissionEnergyReleasePromptGammaEnergySet


!! -----------------------------------------------------------------------------
!! Child: delayedGammaEnergy
!! -----------------------------------------------------------------------------

!! Has
function FissionEnergyReleaseDelayedGammaEnergyHas(handle) &
      bind(C, name='FissionEnergyReleaseDelayedGammaEnergyHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function FissionEnergyReleaseDelayedGammaEnergyHas

!! Get, const
function FissionEnergyReleaseDelayedGammaEnergyGetConst(handle) &
      bind(C, name='FissionEnergyReleaseDelayedGammaEnergyGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseDelayedGammaEnergyGetConst

!! Get
function FissionEnergyReleaseDelayedGammaEnergyGet(handle) &
      bind(C, name='FissionEnergyReleaseDelayedGammaEnergyGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseDelayedGammaEnergyGet

!! Set
subroutine FissionEnergyReleaseDelayedGammaEnergySet(handle, fieldHandle) &
      bind(C, name='FissionEnergyReleaseDelayedGammaEnergySet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine FissionEnergyReleaseDelayedGammaEnergySet


!! -----------------------------------------------------------------------------
!! Child: delayedBetaEnergy
!! -----------------------------------------------------------------------------

!! Has
function FissionEnergyReleaseDelayedBetaEnergyHas(handle) &
      bind(C, name='FissionEnergyReleaseDelayedBetaEnergyHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function FissionEnergyReleaseDelayedBetaEnergyHas

!! Get, const
function FissionEnergyReleaseDelayedBetaEnergyGetConst(handle) &
      bind(C, name='FissionEnergyReleaseDelayedBetaEnergyGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseDelayedBetaEnergyGetConst

!! Get
function FissionEnergyReleaseDelayedBetaEnergyGet(handle) &
      bind(C, name='FissionEnergyReleaseDelayedBetaEnergyGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseDelayedBetaEnergyGet

!! Set
subroutine FissionEnergyReleaseDelayedBetaEnergySet(handle, fieldHandle) &
      bind(C, name='FissionEnergyReleaseDelayedBetaEnergySet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine FissionEnergyReleaseDelayedBetaEnergySet


!! -----------------------------------------------------------------------------
!! Child: neutrinoEnergy
!! -----------------------------------------------------------------------------

!! Has
function FissionEnergyReleaseNeutrinoEnergyHas(handle) &
      bind(C, name='FissionEnergyReleaseNeutrinoEnergyHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function FissionEnergyReleaseNeutrinoEnergyHas

!! Get, const
function FissionEnergyReleaseNeutrinoEnergyGetConst(handle) &
      bind(C, name='FissionEnergyReleaseNeutrinoEnergyGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseNeutrinoEnergyGetConst

!! Get
function FissionEnergyReleaseNeutrinoEnergyGet(handle) &
      bind(C, name='FissionEnergyReleaseNeutrinoEnergyGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseNeutrinoEnergyGet

!! Set
subroutine FissionEnergyReleaseNeutrinoEnergySet(handle, fieldHandle) &
      bind(C, name='FissionEnergyReleaseNeutrinoEnergySet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine FissionEnergyReleaseNeutrinoEnergySet


!! -----------------------------------------------------------------------------
!! Child: nonNeutrinoEnergy
!! -----------------------------------------------------------------------------

!! Has
function FissionEnergyReleaseNonNeutrinoEnergyHas(handle) &
      bind(C, name='FissionEnergyReleaseNonNeutrinoEnergyHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function FissionEnergyReleaseNonNeutrinoEnergyHas

!! Get, const
function FissionEnergyReleaseNonNeutrinoEnergyGetConst(handle) &
      bind(C, name='FissionEnergyReleaseNonNeutrinoEnergyGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseNonNeutrinoEnergyGetConst

!! Get
function FissionEnergyReleaseNonNeutrinoEnergyGet(handle) &
      bind(C, name='FissionEnergyReleaseNonNeutrinoEnergyGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseNonNeutrinoEnergyGet

!! Set
subroutine FissionEnergyReleaseNonNeutrinoEnergySet(handle, fieldHandle) &
      bind(C, name='FissionEnergyReleaseNonNeutrinoEnergySet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine FissionEnergyReleaseNonNeutrinoEnergySet


!! -----------------------------------------------------------------------------
!! Child: totalEnergy
!! -----------------------------------------------------------------------------

!! Has
function FissionEnergyReleaseTotalEnergyHas(handle) &
      bind(C, name='FissionEnergyReleaseTotalEnergyHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function FissionEnergyReleaseTotalEnergyHas

!! Get, const
function FissionEnergyReleaseTotalEnergyGetConst(handle) &
      bind(C, name='FissionEnergyReleaseTotalEnergyGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseTotalEnergyGetConst

!! Get
function FissionEnergyReleaseTotalEnergyGet(handle) &
      bind(C, name='FissionEnergyReleaseTotalEnergyGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseTotalEnergyGet

!! Set
subroutine FissionEnergyReleaseTotalEnergySet(handle, fieldHandle) &
      bind(C, name='FissionEnergyReleaseTotalEnergySet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine FissionEnergyReleaseTotalEnergySet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalFissionEnergyRelease
